--- a/vervex/src/Styles/Navbar.css
+++ b/vervex/src/Styles/Navbar.css
@@ -2,12 +2,13 @@
     display: flex;
     align-items: center;
     /* justify-content: center; */
-    background-color: #050D14;
+    background-color: hsl(208, 60%, 5%);
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #E7E3E3;
+    /* padding: 20px; */
     /* z-index: 99; */
     /* position: sticky; */
     
@@ -106,4 +107,61 @@ background: linear-gradient(331deg, rgba(79,0,245,1) 3%, rgba(150,7,218,1) 48%);
 span{
     margin-left: 16px;
 
+}
+@media screen and (max-width: 1271px){
+    .nav-menu.active{
+        left: 81%;
+    }
+}
+@media screen and (max-width: 1028px){
+    .nav-menu.active{
+        left: 77%;
+    }
+}
+@media screen and (max-width: 870px){
+    .nav-menu.active{
+        left: 72%;
+    }
+}
+@media screen and (max-width: 750px){
+    .nav-menu.active{
+        left:67%;
+    }
+}
+@media screen and (max-width: 700px){
+    .nav-menu.active{
+        left:64.5%;
+    }
+    .nav-div-contact{
+        display: none;
+    }
+}
+@media screen and (max-width: 600px){
+    .nav-menu.active{
+        left:57.3%;
+    }
+}
+@media screen and (max-width: 470px){
+    .nav-menu.active{
+        left:50.3%;
+    }
+    .nav-menu{
+        width: 300px;
+    }
+    .nav-menu-bars{
+        display: none;
+    }
+    .menu-bars{
+        margin-right: 30px;
+    }
+}
+@media screen and (max-width: 430px){
+    .nav-menu.active{
+        left:40.3%;
+    }
+}
+@media screen and (max-width: 350px){
+    .nav-menu.active{
+        left:33.3%;
+    }
 }
