--- a/vervex/src/Styles/HeroCarousel.css
+++ b/vervex/src/Styles/HeroCarousel.css
@@ -2,10 +2,16 @@
     display: none;
 }
 .Carousel_container{
-    position: absolute;
+    /* position: absolute; */
         /* margin-top: "20rem"; */
         /* height: 100rem; */
         /* background-color: yellow; */
+}
+.hero-image {
+    width:35rem;
+    height: 35rem;
+    /* margin-bottom: 5rem; */
+    /* margin-top: 5rem; */
 }
 .carousel-image {
     margin-top: 10%;
