--- a/vervex/src/Styles/HeroSection.css
+++ b/vervex/src/Styles/HeroSection.css
@@ -10,10 +10,10 @@
 .hero_container{
     background-color: var(--main-color);
     /* background-color: rgb(211, 46, 46); */
-    height: 100vh;
+    height: 104vh;
     width: 100%;
 }
-.hero_circle{
+.hero_circle,.smallAbout_circle{
     width: 20rem;
     height: 20rem;
     border-radius: 50%;
@@ -29,6 +29,10 @@
 
         box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
         animation: moveUpDown 5s ease-in-out infinite;
+}
+.smallAbout_circle{
+    top: 80px;
+            left: 50rem;
 }
 @keyframes moveUpDown {
 
@@ -72,19 +76,20 @@
         width: 443px;
         height: 415px;
         left: 10%;
-        top: 20%;
+        top: 30%;
         font-family: 'Roboto';
         font-style: normal;
         /* font-weight: 400; */
         font-size: 2.5rem;
         /* line-height: 56px; */
         color: #FFFFFF;
+        /* text-align: left; */
         @media (max-width: 768px) {
                  
-                    width: auto;
+                    width: 30rem;
                     height: auto;
                     /* left: 10%; */
-                    margin-right: 10%;
+                    margin-right: 12%;
                     top: 5%;
                     right: 0;
                     bottom: 0;
@@ -108,11 +113,11 @@
 
         @media (max-width:768px) {
             position: absolute;
-                width: 152px;
-                height: 40px;
+                width: 252px;
+                height: 60px;
                 left: 23%;
-                top: 170px;
-            
+                top: 130px;
+            /* margin-bottom: 20rem; */
                 background: linear-gradient(92.42deg, #9607DA 47.97%, #4F00F5 107.48%);
                 border-radius: 30px;
                 outline: none;
@@ -135,4 +140,31 @@ background: linear-gradient(92.42deg, #b336ed 47.97%, #8855f7 107.48%);
     -moz-background-clip: text;
     background-clip: text;
     color: transparent;
+}
+/* styles.css */
+@keyframes marquee {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-100%);
+    }
+}
+
+.marquee-element {
+    animation: marquee 10s linear infinite;
+}
+
+@media (max-width:768px) {
+    .hero_circle{
+        width: 10rem;
+        height: 10rem;
+    }
+    .hero_testimonial img{ 
+         margin-top: 5rem;
+         /* width: 100rem;/ */
+    }
+   
+    
 }
