--- a/vervex/src/Styles/ExtendedService.css
+++ b/vervex/src/Styles/ExtendedService.css
@@ -1,96 +1,144 @@
-.mainExtended{
-    height: 230vh;
-background-color: var(--main-color);
-      
+.mainExtended {
+  /* height: 230vh; */
+  background-color: var(--main-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.extended_header{
-    /* background: linear-gradient(236.42deg, #8105E1 30.05%, rgba(0, 124, 124, 0) 127.3%); */
-    /* height: 30vh; */
-    /* background-color: aqua; */
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0rem;
-       /* border: 2px solid red; */
+.extended_header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  gap: 2rem;
+  margin-top: -30px;
+  /* border: 1px solid red; */
 }
 .extended_img {
-    /* align-items: flex-start; */
-    /* border: 2px solid red; */
-    /* align-items: center; */
-    /* justify-content: center; */
 }
-.extended_img img{
-    /* margin-bottom: 3rem; */
-    padding-bottom: 4rem;
+.extended_img img {
+  padding-bottom: 4rem;
+  margin-top: 3rem;
+  margin-right: 3%;
 }
 
 .extended_text {
-    /* margin: 5% 5%; */
-    margin-top: 10%;
-    color: white;
-    font-family: "Roboto";
-    /* font-size: 0.2rem; */
-    width: 35rem;
-    /* border: 2px solid red; */
-    text-align: left;
-    font-size: 1rem;
+  margin-top: 10%;
+  color: white;
+  font-family: "Encode Sans";
+  width: 35rem;
+  text-align: left;
+  font-size: 1.3rem;
 }
-.extended_main_header{
-    /* position: absolute; */
-    /* margin-top: 2%; */
-    text-align: left;
-        font-family: 'Encode Sans';
-            color: white;
-            font-size: 40px;
-            /* line-height: 20px; */
-            margin-top: 50px;
-            padding: 20px;
-            padding-left: 4rem;
+.extended_HeadText{
+    font-weight: 500;
+    margin: 0;
+    background: linear-gradient(92.64deg, #8105e1 24.98%, #df04f2 94.53%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
-.extended_cards_main{
-    display: flex;
-    flex-wrap: wrap;
-        background-color: var(--main-color);
-        height: 130vh;
-        gap: 2rem;
+.extended_main_header {
+ 
+  text-align: left;
+  font-family: "Encode Sans";
+  font-size: 40px;
+  margin-top: 50px;
+  padding: 20px;
+  padding-left: 4rem;
+}
+.extended_cards_main {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  background-color: var(--main-color);
+  /* height: 130vh; */
+  width: 80%;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  /* margin-left: 2%; */
+}
+.extended_cards {
+  display: block;
+  width: 15rem;
+  height: 20rem;
+  border: 2px solid red;
+  border-radius: 20%;
+  /* From https://css.glass */
+
+  background: rgba(255, 255, 255, 0.28);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(87, 6, 151, 0.48);
+  border-radius: 30px;
+}
+.extended_icon {
+  color: white;
+  text-align: center;
+  justify-content: center;
+  font-size: 2rem;
+  margin-top: 2rem;
+}
+.extended_icon_header {
+  color: white;
+  text-align: center;
+  justify-content: center;
+  margin-top: 1.8rem;
+}
+.extended_icon_text {
+  color: white;
+  text-align: justify;
+  justify-content: justify;
+  margin-top: 1.8rem;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+@media screen and (max-width: 1164px){
+    .extended_header{
+        /* border: 1px solid red; */
+        gap: 20px;
+        width: 95%;
+    }
+    .extended_main_header{
+        padding: 0;
+        width: 50%;
+    }
+    .extended_img img{
+        width: 90%;
+        margin-right: 0;
+        margin-left: 40px;
+        /* border: 1px solid red; */
+    }
+}
+@media screen and (max-width: 1000px){
+    .extended_header{
+        flex-direction: column-reverse;
+    }
+    .extended_main_header{
+        display: flex;
         align-items: center;
         justify-content: center;
-        /* margin-left: 2%; */
-}
-.extended_cards{
-    display: block;
-    width: 15rem;
-    height: 20rem;
-    border: 2px solid red;
-    border-radius: 20%;
-    /* From https://css.glass */
-
-        background: rgba(255, 255, 255, 0.28);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        background: rgba(87, 6, 151, 0.48);
-            border-radius: 30px;
-}
-.extended_icon{
-    color: white;
-    text-align: center;
-    justify-content: center;
-    font-size: 2rem;
-    margin-top: 2rem;
-}
-.extended_icon_header{
-        color: white;
-            text-align: center;
-            justify-content: center;
-                margin-top: 1.8rem;
-}
-.extended_icon_text{
-    color: white;
-        text-align: justify;
-        justify-content: justify;
-        margin-top: 1.8rem;
-        margin-left: 10%;
-        margin-right: 10%;
+        flex-direction: column;
+        margin-top: -40px;
+        /* border: 1px solid yellowgreen; */
+        width: 90%;
+    }
+    .extended_text{
+        text-align: center;
+        width: 90%;
+        /* border: 1px solid red; */
+    }
+    .hero_circle{
+        display: none;
+    }
+    .extended_img img{
+        margin: 0;
+        margin-left: 10px;
+    }
 }
