--- a/vervex/src/Styles/TechStack.css
+++ b/vervex/src/Styles/TechStack.css
@@ -1,53 +1,69 @@
-.tech_main{
-    /* width: 100vh; */
-height: 100vh;
-background: var(--main-color);
-/* background-color: red; */
-
+.tech_main {
+  /* width: 100vh; */
+  height: 100vh;
+  background: var(--main-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid blue; */
 }
-.tech_header{
-        color: white;
-            /* position: absolute; */
-            top: 17rem;
-            width: 40rem;
-            margin-left: 35rem;
-            margin-right: 16rem;
-            font-family: "Roboto";
-            font-size: 1.4rem;
+.tech-sub{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-
-.tech_icon,.tech_icon_text {
-    color: #fcf7f7;
-    font-size: 5rem;
-    /* default color */
-    transition: color 0.3s ease-in-out;
-    /* transition for smooth color change */
+.tech_header {
+  color: white;
+  font-family: "Encode Sans";
+  font-size: 2.5rem;
+  font-weight: 550;
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.tech_icon_text img{
-    width: 3rem;
-    height: 3rem;
-    color: #fcf7f7;
-    image-rendering: auto;
-    filter: invert(100%);
-}
-.tech_icon_text{
-font-size: 2rem;
-}
-.tech_icon_text:hover {
-    color: #57028f;
-cursor: none;
-}
-.tech_icon:hover {
-    color: #57028f;
-    /* color on hover */
-    cursor: none;
+.tech_header_text{
+    margin: 0;
+    width: fit-content;
+    border-bottom:3px solid #57028f ;
 }
 .tech_icon_container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5rem;
-    margin-top: 5rem;
-    flex-direction: row;
-        margin-left: 15rem;
-        width: 67%;
+    border:  1px solid red;
+}
+
+.tech_icon,
+.tech_icon_text {
+  color: #fcf7f7;
+  font-size: 7rem;
+  /* default color */
+  transition: color 0.3s ease-in-out;
+  /* transition for smooth color change */
+}
+.tech_icon_text img {
+  width: 3rem;
+  height: 3rem;
+  color: #fcf7f7;
+  image-rendering: auto;
+  filter: invert(100%);
+}
+.tech_icon_text {
+  font-size: 2rem;
+}
+.tech_icon_text:hover {
+  color: #57028f;
+  cursor: none;
+}
+.tech_icon:hover {
+  color: #57028f;
+  /* color on hover */
+  cursor: none;
+}
+.tech_icon_container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+  margin-top: 5rem;
+  flex-direction: row;
+  width: 60%;
 }
