hero & tech res

--- a/vervex/src/Styles/HeroCarousel.css
+++ b/vervex/src/Styles/HeroCarousel.css
@@ -8,8 +8,8 @@
         /* background-color: yellow; */
 }
 .hero-image {
-    width:35rem;
-    height: 35rem;
+    /* width:35rem; */
+    /* height: 35rem; */
     /* margin-bottom: 5rem; */
     /* margin-top: 5rem; */
 }
