--- a/vervex/src/Styles/TechStack.css
+++ b/vervex/src/Styles/TechStack.css
@@ -1,9 +1,11 @@
 .tech_main {
   /* width: 100vh; */
-  height: 100vh;
+  /* height: 100vh; */
+  margin-top: 40px;
   background: var(--main-color);
   display: flex;
-  align-items: center;
+ 
+  /* align-items: center; */
   justify-content: center;
   /* border: 1px solid blue; */
 }
@@ -29,20 +31,29 @@
     border-bottom:3px solid #57028f ;
 }
 .tech_icon_container{
-    border:  1px solid red;
+    /* border:  1px solid red;s */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    /* height: fit-content; */
 }
 
 .tech_icon,
 .tech_icon_text {
   color: #fcf7f7;
-  font-size: 7rem;
-  /* default color */
+  height: 100px;
+  width: 100px;
+  filter: brightness(0) invert(1);
   transition: color 0.3s ease-in-out;
-  /* transition for smooth color change */
+}
+.sh_icons{
+  height: 100px;
+  width: 100px;
 }
 .tech_icon_text img {
-  width: 3rem;
-  height: 3rem;
+  width: 6rem;
+  height: 6rem;
   color: #fcf7f7;
   image-rendering: auto;
   filter: invert(100%);
@@ -66,4 +77,11 @@
   margin-top: 5rem;
   flex-direction: row;
   width: 60%;
+}
+
+@media screen and (max-width: 500px){
+  .tech_icon, .sh_icons{
+    width: 60px;
+    height: 60px;
+  }
 }
