--- a/vervex/src/Styles/Footer.css
+++ b/vervex/src/Styles/Footer.css
@@ -101,7 +101,7 @@ margin-bottom: 30px;
     text-align: center;
   }
   .footer_button{
-    background-color: white;
+    /* background-color: white; */
     border-radius: 50%;
     height: 20px;
     width: 20px;
