--- a/vervex/src/Styles/AboutCompanySmall.css
+++ b/vervex/src/Styles/AboutCompanySmall.css
@@ -1,6 +1,6 @@
 .About_component {
-    width: 240px;
-    /* width: 100vw; */
+    width: 98.6vw;
+
     height: 70vh;
     background-color: #f1f1f1;
     transition: transform 0.8s ease-in-out;
@@ -9,19 +9,57 @@
 
 .About_main {
     height: 80vh;
-    width: 98.9vw;
+width: 98.6vw;
     background-color: var(--main-color);
 }
 
 .About_Comp_text {
+
+                color: "white";
+                    position: "absolute";
+                    /* margin-top: -18rem; */
+                    margin-left: 16rem;
+                    margin-right: 16rem;
+                    font-family: "Roboto";
+                    font-size: 1.7rem;
+                    text-align: "justify";
+            
+}
+.about_small_text{
     color: "white";
-    /* position: "absolute";  */
-    margin-top: "-17rem";
+            position: "absolute";
+            margin-top :-22rem;
+            margin-left: 16rem;
+            margin-right: 16rem;
+            margin-bottom: 2rem;
+            font-family: "Roboto";
+            font-size: 1.7rem;
+            text-align: "justify"
 }
 
+
 @media (max-width: 768px) {
-    .About_component {
-        width: 150px;
-        height: 75px;
+
+    .About_component{
+        margin-top: 10%;
+            width: 101.1%;
+            height: 100%;
     }
+    .about_small_text{
+margin-left: 23%;
+    border: 2px solid rebeccapurple;
+    width: 19rem;
+    margin-top: -159%;
+    }
+        .About_Comp_text{
+            margin-left: 11% ;
+                border: 2px solid rebeccapurple;
+                width: 21rem;
+                text-align: justify;
+                /* margin-top: -159%; */
+        }
+        .smallAbout_circle{
+            top: 0;
+            left: 0;
+        }
 }
