--- a/vervex/src/Styles/Services.css
+++ b/vervex/src/Styles/Services.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 7%;
 }
 .service_mainHead_text {
   margin-bottom: 8px;
@@ -47,8 +48,8 @@ margin-top: 30px;
     text-decoration: none;
 }
 .service_box1,.service_box2,.service_box3{
-    text-decoration: none;
-    /* width: 200px; */
+    /* text-decoration: none;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,22 +58,45 @@ margin-top: 30px;
 border-radius: 30px;
 padding: 20px;
 cursor: pointer;
-height: 90%;
+height: 90%; */
+
+text-decoration: none;
+    /* width: 77%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: rgba(87, 6, 151, 0.48);
+    border-radius: 30px;
+    padding: 18px;
+    cursor: pointer;
+    height: 90%;
     
 }
-.service_box1_text{
-    margin-top: 20px;
+.service_box1_text,.service_box3_text{
+    /* margin-top: 20px;
     font-family: 'Nunito';
     font-weight: 600;
     font-size: 36px;
     line-height: 49px;
     border-bottom: 5px solid #8105e1;
-    /* width: 70%; */
+
     margin-left: 0;
     margin-bottom: 20px;
-    text-decoration: none;
+    text-decoration: none; */
+
+    margin-top: 19px;
+        font-family: 'Nunito';
+        font-weight: 600;
+        font-size: 23px;
+        line-height: 49px;
+        /* border-bottom: 5px solid #8105e1; */
+        /* width: 70%; */
+        margin-left: 0;
+        margin-bottom: 20px;
+        text-decoration: none;
 }
-.service_box3_text{
+/* .service_box3_text{
     text-decoration: none;
     margin-top: -10px;
     font-family: 'Nunito';
@@ -80,14 +104,14 @@ height: 90%;
     font-size: 36px;
     line-height: 49px;
     border-bottom: 5px solid #8105e1;
-    /* width: 80%; */
+
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 0;
     margin-bottom: 20px;
     width: 40%;
-}
+} */
 /* .serivce_box_1_imageDiv,.serivce_box_2_imageDiv{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -135,6 +159,17 @@ height: 90%;
         justify-content: center;
     }
     .service_subHead{
+        width: 80%;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .service_mainContainer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .service_subHead {
         width: 80%;
     }
 }
